changed api file

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -3,7 +3,7 @@ name: Test API on Push
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ master, main, cd-streamlit ]
   pull_request:
     branches: [ master, main ]
 
